infrastructure/controllers/web-check/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-check
  namespace: web-check
  labels:
    app.kubernetes.io/name: web-check
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: web-check
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web-check
    spec:
      containers:
        - name: web-check
          image: lissy93/web-check:1.0.0
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
