infrastructure/controllers/web-check/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-check
  namespace: web-check
  labels:
    app.kubernetes.io/name: web-check
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: web-check
